--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/proxy.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/proxy.js"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "https://generativelanguage.googleapis.com/$1" }
   ]
 }
